--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -395,6 +395,7 @@
   _paq.push(['setLinkClasses', "mtrcs-external-link"]);
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
+  _paq.push(['trackVisibleContentImpressions', true, 500]); 
 
   (function () {
     var u = "//mtrcs.explicitconsulting.at/";
