--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -394,7 +394,7 @@
   _paq.push(['enableHeartBeatTimer']);
   _paq.push(['setLinkClasses', "mtrcs-external-link"]);
   _paq.push(['trackPageView']);
-  _paq.push(['trackVisibleContentImpressions', true, 500]); 
+  _paq.push(['trackVisibleContentImpressions']);
   _paq.push(['enableLinkTracking']);
 
 
