--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,7 +44,7 @@
             <div class="navbar-end">
                 <a class="navbar-item has-text-white" href="/search" aria-label="Search">
                     <span class="icon"><i class="fas fa-search"></i></span>
-                    <span class="is-sr-only">Search</span>
+                    <span>Search</span>
                 </a>
 
                 <div class="navbar-item has-text-white">
@@ -57,7 +57,7 @@
                 </div>
 
                 {% if site.gh_sponsor %}
-                <a class="navbar-item has-text-white" href="https://github.com/sponsors/{{ site.gh_sponsor }}">
+                <a class="navbar-item has-text-white" href="https://github.com/sponsors/{{ site.gh_sponsor }}" aria-lable="Sponsor">
                     <span class="icon gh-sponsor"><i class="fas fa-heart"></i></span>
                     <span>Sponsor</span>
                 </a>
