--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,7 +43,8 @@
 
             <div class="navbar-end">
                 <a class="navbar-item has-text-white" href="/search" aria-label="Search">
-                    <span class="icon"><i class="fas fa-search"></i>Search</span>
+                    <span class="icon"><i class="fas fa-search"></i></span>
+                    <span>Search</span>
                 </a>
 
                 <div class="navbar-item has-text-white">
