Add Search and Sponsor

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,8 +43,7 @@
 
             <div class="navbar-end">
                 <a class="navbar-item has-text-white" href="/search" aria-label="Search">
-                    <span class="icon"><i class="fas fa-search"></i></span>
-                    <span>Search</span>
+                    <span>🔍︎ Search</span>
                 </a>
 
                 <div class="navbar-item has-text-white">
@@ -58,8 +57,7 @@
 
                 {% if site.gh_sponsor %}
                 <a class="navbar-item has-text-white" href="https://github.com/sponsors/{{ site.gh_sponsor }}" aria-lable="Sponsor">
-                    <span class="icon gh-sponsor"><i class="fas fa-heart"></i></span>
-                    <span>Sponsor</span>
+                    <span>♡︎ Sponsor</span>
                 </a>
                 {% endif %}
             </div>
