--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,9 @@
             href="{{ site.baseurl }}/favicon.png"
         {% endif %}
     >
+
+    <script defer src="https://unpkg.com/alpinejs@3.9.0/dist/cdn.min.js"></script>
+    
     {% unless site.hide_share_buttons %}
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-social@1/bin/bulma-social.min.css">
     {% endunless %}
