fix: Update tracking script URLs to use the correct domain

--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -399,7 +399,7 @@
 
 
   (function () {
-    var u = "//mtrcs.explicitconsulting.at/";
+    var u = "//mtrcs.set-outlooksignatures.com/";
     _paq.push(["setTrackerUrl", u + "poop.php"]);
     _paq.push(["setSiteId", "1"]);
     var d = document, g = d.createElement("script"), s = d.getElementsByTagName("script")[0];
@@ -408,7 +408,7 @@
 </script>
 
 <noscript>
-  <p><img referrerpolicy="no-referrer-when-downgrade" src="//mtrcs.explicitconsulting.at/poop.php?idsite=1&amp;rec=1"
+  <p><img referrerpolicy="no-referrer-when-downgrade" src="//mtrcs.set-outlooksignatures.com/poop.php?idsite=1&amp;rec=1"
       style="border:0;" alt="" /></p>
 </noscript>
 <!-- End mtrcs code -->
