add languag selector icon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,7 +47,7 @@
                 </a>
 
                 <div class="navbar-item has-text-white">
-                    <label for="languageDropdown" class="is-sr-only">Select language</label>
+                    <label for="languageDropdown">🌐 </label>
                     <select id="languageDropdown" name="languageDropdown"
                         onchange="localStorage.setItem('languageDropdownValue', this.value); location.reload();">
                         <option value="de">Deutsch (de)</option>
